--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,83 +1,79 @@
-name: thonny-ide
+name: transmission-community
 base: core22
-adopt-info: thonny
-summary: Python IDE for beginners
+adopt-info: transmission-community
+summary: Lightweight FOSS Gtk Torrent Client.
 description: |
-  Thonny is a Python IDE meant for learning programming.
+  Transmission is a Lightweight and Powerful Bit-Torrent Client.
 grade: stable
 confinement: strict
 compression: lzo
-
 architectures:
   - build-on: amd64
     build-for: amd64
     
-#slots
-#thonny-ide
-#interface: dbus
-#bus: session
-#name: org.thonny-ide.thonny
+slots:
+  transmission-community:
+    interface: dbus
+    bus: session
+    name: org.transmission-gtk.community
 
 apps:
-  thonny-ide:
-    command: bin/thonny
+  transmission-community:
+    command: usr/local/bin/transmission-gtk
     extensions: [gnome]
-    common-id: org.thonny-ide.thonny
+    common-id: org.community.transmission
     environment:
-            THONNY_USER_DIR: $SNAP_USER_DATA
-            #GTK_USE_PORTAL: 1
+            GTK_USE_PORTAL: 1
     plugs:
-      #- desktop
       - home
-      #- mount-observe
       - network
       - network-bind
       - raw-usb
       - removable-media
-      #- x11
-      #- desktop-legacy
       - unity7
-      #- wayland
       - screen-inhibit-control
-      #- opengl
+      - process-control
+   
       
 
 parts:
-  thonny:
-    source: https://github.com/thonny/thonny.git
-    plugin: dump
-    build-packages:
-    - wget
-    - build-essential
+  transmission-community:
+    source: https://github.com/transmission/transmission.git
+    plugin: nil
     override-pull: |
-      VER="$(git ls-remote --tags https://github.com/thonny/thonny.git | \
-           sed 's;^.*/v;;' | sort -t. -k 1,1n -k 2,2n -k 3,3n | tail -1)"
-      wget -q -O- https://github.com/thonny/thonny/releases/download/v${VER}/thonny-${VER}-x86_64.tar.gz |\
-           tar xzf - --strip-components=1 -C $CRAFT_PART_SRC
-      craftctl set version="${VER}"
+      craftctl default
+      craftctl set version=$(git describe --tags) 
+      
+    build-packages:
+      - curl
+      - build-essential
+      - automake
+      - autoconf
+      - libtool
+      - pkg-config
+      - intltool
+      - libcurl4-openssl-dev
+      - libglib2.0-dev
+      - libevent-dev
+      - libminiupnpc-dev
+      - libgtk-3-dev
+      - libappindicator3-dev
+      - libssl-dev
+    
+    build-snaps:
+      - cmake
+      - ubuntu-make
+      
     override-build: |
       craftctl default
-      # evil hack around some newer lib versions
-      cd $CRAFT_PART_INSTALL/usr/lib/$CRAFT_ARCH_TRIPLET/
-      ln -sf libffi.so.7 libffi.so.6
-      ln -sf libgdbm.so.6 libgdbm.so.3
-      ln -sf libgdbm_compat.so.4 libgdbm_compat.so.3
-      cd $CRAFT_PART_INSTALL/lib/$CRAFT_ARCH_TRIPLET/
-      ln -sf libreadline.so.8 libreadline.so.6
+      curl -LO https://github.com/transmission/transmission/releases/download/4.0.1/transmission-4.0.1.tar.xz
+      tar xf transmission-4.0.1.tar.xz
+      cd transmission-4.0.1
+      mkdir build
+      cd build 
+      cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo ..
+      make -j$SNAPCRAFT_PARALLEL_BUILD_COUNT PREFIX=/usr
+      make PREFIX=/usr DESTDIR=${SNAPCRAFT_PART_INSTALL} install
+      
     stage-packages:
-      - libffi7
-      - libfreetype6
-      - libfontconfig1
-      - libgdbm6
-      - libgdbm-compat4
-      - libncursesw5
-      - libpng16-16
-      - libreadline8
-      - libtinfo5
-      - libx11-6
-      - libxau6
-      - libxcb1
-      - libxdmcp6
-      - libxft2
-      - libxrender1
-      - mount
+      - libminiupnpc17
