--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,9 +1,9 @@
-name: transmission-community
+name: atril-mate
 base: core22
-adopt-info: transmission-community
-summary: Lightweight FOSS Gtk Torrent Client.
+adopt-info: atril-mate
+summary: Lightweight and Powerful Document Reader from Mate Community.
 description: |
-  Transmission is a Lightweight and Powerful Bit-Torrent Client.
+  Atril is a Lightweight and Powerful Document Viewer.
 grade: stable
 confinement: strict
 compression: lzo
@@ -11,17 +11,17 @@ architectures:
   - build-on: amd64
     build-for: amd64
     
-slots:
-  transmission-community:
-    interface: dbus
-    bus: session
-    name: org.transmission-gtk.community
-
+#slots:
+  #atril-mate:
+    #interface: dbus
+    #bus: session
+    #name: org.transmission-gtk.community
+    
 apps:
-  transmission-community:
-    command: usr/local/bin/transmission-gtk
+  atril-mate:
+    command: usr/local/bin/atril
     extensions: [gnome]
-    common-id: org.community.transmission
+    common-id: org.mate.atril
     environment:
             GTK_USE_PORTAL: 1
     plugs:
@@ -32,13 +32,13 @@ apps:
       - removable-media
       - unity7
       - screen-inhibit-control
-      - process-control
+    
    
       
 
 parts:
-  transmission-community:
-    source: https://github.com/transmission/transmission.git
+  atril-mate:
+    source: https://github.com/mate-desktop/atril.git
     plugin: nil
     override-pull: |
       craftctl default
@@ -46,34 +46,43 @@ parts:
       
     build-packages:
       - curl
-      - build-essential
-      - automake
-      - autoconf
-      - libtool
-      - pkg-config
-      - intltool
-      - libcurl4-openssl-dev
+      - build-essential   
+      - autopoint
+      - clang
+      - clang-tools
+      - git
+      - gobject-introspection
+      - libcaja-extension-dev
+      - libdjvulibre-dev
+      - libgail-3-dev
+      - libgirepository1.0-dev
       - libglib2.0-dev
-      - libevent-dev
-      - libminiupnpc-dev
       - libgtk-3-dev
-      - libappindicator3-dev
-      - libssl-dev
-    
-    build-snaps:
-      - cmake
-      - ubuntu-make
+      - libgxps-dev
+      - libkpathsea-dev
+      - libsynctex-dev
+      - libpoppler-glib-dev
+      - libsecret-1-dev
+      - libsm-dev
+      - libspectre-dev
+      - libtiff-dev
+      - libwebkit2gtk-4.0-dev
+      - libx11-dev
+      - libxml2-dev
+      - lsb-release
+      - make
+      - mate-common
+      - xsltproc
+      - yelp-tools
+      - zlib1g-dev
       
     override-build: |
       craftctl default
-      curl -LO https://github.com/transmission/transmission/releases/download/4.0.1/transmission-4.0.1.tar.xz
-      tar xf transmission-4.0.1.tar.xz
-      cd transmission-4.0.1
-      mkdir build
-      cd build 
-      cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo ..
+      curl -LO https://github.com/mate-desktop/atril/releases/download/v1.27.0/atril-1.27.0.tar.xz
+      tar xf atril-1.27.0.tar.xz
+      cd atril-1.27.0
+      ./autogen.sh --prefix=/usr
       make -j$SNAPCRAFT_PARALLEL_BUILD_COUNT PREFIX=/usr
       make PREFIX=/usr DESTDIR=${SNAPCRAFT_PART_INSTALL} install
       
-    stage-packages:
-      - libminiupnpc17
+ 
