--- a/snap/gui/transmission.desktop
+++ b/snap/gui/transmission.desktop
@@ -1,24 +1,13 @@
 [Desktop Entry]
-Name=Transmission
-GenericName=BitTorrent Client
-Comment=Download and share files over BitTorrent
-Keywords=torrents;downloading;uploading;share;sharing;
-Exec=transmission-gtk %U
-Icon=transmission
+Name=Atril Document Viewer
+GenericName=Document Viewer
+Comment=View multi-page documents
+Exec=atril-mate %U
+Icon=${SNAP}/meta/gui/atril.svg
+Keywords=MATE;document;viewer;pdf;dvi;ps;xps;tiff;pixbuf;djvu;comics;
 Terminal=false
-TryExec=transmission-gtk
+TryExec=atril-mate
 Type=Application
 StartupNotify=true
-MimeType=application/x-bittorrent;x-scheme-handler/magnet;
-Categories=Network;FileTransfer;P2P;GTK;
-X-Ubuntu-Gettext-Domain=transmission
-X-AppInstall-Keywords=torrent
-Actions=Pause;Minimize;
-
-[Desktop Action Pause]
-Name=Start Transmission with All Torrents Paused
-Exec=transmission-gtk --paused
-
-[Desktop Action Minimize]
-Name=Start Transmission Minimized
-Exec=transmission-gtk --minimized
+MimeType=application/pdf;application/x-bzpdf;application/x-gzpdf;application/x-xzpdf;application/postscript;application/x-bzpostscript;application/x-gzpostscript;image/x-eps;image/x-bzeps;image/x-gzeps;application/x-dvi;application/x-bzdvi;application/x-gzdvi;image/vnd.djvu;image/vnd.djvu+multipage;image/tiff;application/x-cbr;application/x-cbz;application/x-cb7;application/x-cbt;application/vnd.comicbook+zip;application/vnd-comicbook.rar;image/*;application/oxps;application/vnd.ms-xpsdocument;application/epub+zip;
+Categories=GTK;Office;Viewer;
