--- a/snap/gui/Atril.desktop
+++ b/snap/gui/Atril.desktop
@@ -3,7 +3,7 @@ Name=Atril Document Viewer
 GenericName=Document Viewer
 Comment=View multi-page documents
 Exec=atril-mate %U
-Icon=${SNAP}/meta/gui/atril.svg
+Icon=${SNAP}/meta/gui/240px-Atril_logo.svg.png
 Keywords=MATE;document;viewer;pdf;dvi;ps;xps;tiff;pixbuf;djvu;comics;
 Terminal=false
 TryExec=atril-mate
